--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ Django==3.2.5
 django-cleanup==5.2.0
 django-crispy-forms==1.10.0
 django-jsonview==2.0.0
+et-xmlfile==1.1.0
+openpyxl==3.0.7
 Pillow==8.0.1
 python-dotenv==0.15.0
 pytz==2021.1
 sqlparse==0.4.1
-whitenoise==5.2.0
+whitenoise==5.3.0
