move html template to base dir

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,6 +2,12 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/smkbandung/python_app/primaseru/
-    - /bin/cp -r * $DEPLOYPATH
-    # - /bin/cp index.html $DEPLOYPATH
-    # - /bin/cp style.css $DEPLOYPATH
+    - /bin/cp -r dashboard $DEPLOYPATH
+    - /bin/cp -r homepage $DEPLOYPATH
+    - /bin/cp -r participant_profile $DEPLOYPATH
+    - /bin/cp -r users $DEPLOYPATH
+    - /bin/cp -r templates $DEPLOYPATH
+    - /bin/cp -r requirements.txt $DEPLOYPATH
+    - source /home/smkbandung/virtualenv/python_app/primaseru/3.7/bin/activate && cd /home/smkbandung/python_app/primaseru
+    - ./manage.py collectstatic --noinput
+    - ./manage.py migrate
