--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2021.5.30
 charset-normalizer==2.0.3
 Django==3.2.5
 django-cleanup==5.2.0
+django-cors-headers==3.7.0
 django-crispy-forms==1.10.0
 django-excel-response==2.0.5
 django-jsonview==2.0.0
@@ -18,3 +19,4 @@ six==1.16.0
 sqlparse==0.4.1
 urllib3==1.26.6
 whitenoise==5.3.0
+XlsxWriter==3.0.1
