implement: reset primaseru (delete all participant)

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ tmp/
 build
 htmlcov
 
+todo.md
 
 # Created by https://www.toptal.com/developers/gitignore/api/django,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,python
